kubernetes/llm/components/knowledge-sync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: knowledge-sync
  namespace: llm
  labels:
    app.kubernetes.io/name: knowledge-sync
    app.kubernetes.io/instance: knowledge-sync
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: knowledge-sync
